tests/snapshots/cmd_generate__unknown_context_typo.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x unknown context 'secerts' in 'run_name'
  | 
  | Stack trace:
  |     at get (eval_script:46:14)
  |     at run_name (.github/ghat/workflows/bad.ts:3:1)
  |     at resolve_value (eval_script:64:41)
  |     at workflow (eval_script:433:35)
  |     at <anonymous> (.github/ghat/workflows/bad.ts:2:6)
  |
