tests/snapshots/cmd_generate__workflow_call_trigger.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/build.ts ---
const build = workflow("Build", {
  on: triggers({
    workflow_call: {
      inputs: {
        save_cache: input("boolean", { default: true }),
      },
      outputs: {
        artifact: { description: "Build artifact path" },
      },
      secrets: {
        deploy_token: { description: "Token for deployment", required: true },
        optional_key: { description: "Optional API key" },
      },
    },
  }),
  jobs(ctx) {
    const b = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run(`echo save_cache=${ctx.inputs.save_cache}`)
        return { artifact: "build.tar.gz" }
      }
    })
    return { artifact: b.outputs.artifact }
  }
})

workflow("CI", {
  on: triggers({ pull_request: {} }),
  jobs(ctx) {
    const b = ctx.uses("Build That Thing", build, {
      with: { save_cache: false },
      secrets: "inherit",
    })

    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      needs: [b],
      steps(ctx) {
        run(`echo deploying ${ctx.needs.build_that_thing.outputs.artifact}`)
      }
    })
  }
})
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  workflow_call:
    inputs:
      save_cache:
        type: boolean
        default: 'true'
    outputs:
      artifact:
        description: Build artifact path
        value: ${{ jobs.build.outputs.artifact }}
    secrets:
      deploy_token:
        description: Token for deployment
        required: true
      optional_key:
        description: Optional API key
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
    steps:
    - id: step_0
      run: echo save_cache=${{ inputs.save_cache }}
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  pull_request: {}
jobs:
  build_that_thing:
    name: Build That Thing
    uses: ./.github/workflows/generated_build.yaml
    with:
      save_cache: false
    secrets: inherit
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - build_that_thing
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build_that_thing.outputs.artifact }}
