tests/snapshots/cmd_generate__workflow_dispatch_inputs.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_deploy.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/deploy.ts ---
workflow("Deploy", {
  on: triggers({
    workflow_dispatch: {
      inputs: {
        environment: input("choice", {
          description: "Target environment",
          required: true,
          options: ["staging", "production"],
          default: "staging",
        }),
        dry_run: input("boolean", {
          description: "Perform a dry run",
          default: false,
        }),
      }
    }
  }),
  jobs(ctx) {
    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      steps() {
        run(`echo ${ctx.inputs.environment} ${ctx.inputs.dry_run}`)
      }
    })
  }
})
--- .github/workflows/generated_deploy.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Deploy
on:
  workflow_dispatch:
    inputs:
      environment:
        description: Target environment
        type: choice
        required: true
        default: staging
        options:
        - staging
        - production
      dry_run:
        description: Perform a dry run
        type: boolean
        default: 'false'
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo ${{ inputs.environment }} ${{ inputs.dry_run }}
